Add info about message(isRead, isUpdated) in ChatListDTO