@@ -33,11 +33,13 @@ public interface ChatRepository extends JpaRepository<Chat, Long> {
                         .messageId(map.get("messageId") == null ? null : Long.parseLong(String.valueOf(map.get("messageId"))))
                         .text(map.get("text") == null ? null : (String) map.get("text"))
                         .sentAt(map.get("sentAt") == null ? null : ((Timestamp) map.get("sentAt")).toLocalDateTime())
+                        .isRead(map.get("isRead") != null)
+                        .isUpdated(map.get("isUpdated") != null && Boolean.parseBoolean(String.valueOf(map.get("isUpdated"))))
                         .createdAt(map.get("createdAt") == null ? null : ((Timestamp) map.get("createdAt")).toLocalDateTime())
                         .amountNotReadMessages(map.get("amountNotReadMessages") == null ? 0 : ((BigInteger) map.get("amountNotReadMessages")).intValue())
                         .build()
                 )
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Query(value = ChatQuery.FIND_CHAT_BY_USERS,
